@@ -4,7 +4,7 @@
   <Description about="urn:mozilla:install-manifest">
     <em:type>2</em:type> 
     <em:id>quickFilters@axelg.com</em:id>
-    <em:version>3.12.2</em:version>
+    <em:version>3.12.3</em:version>
     <em:creator>Axel Grude</em:creator>
     <em:description>Quickly generate mail filters on the fly, by dragging and dropping mails and analyzing their attributes.</em:description>
     <!-- Thunderbird -->
@@ -12,7 +12,7 @@
       <Description>
         <em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
         <em:minVersion>52.0</em:minVersion>
-        <em:maxVersion>59.*</em:maxVersion>
+        <em:maxVersion>60.*</em:maxVersion>
       </Description>
     </em:targetApplication>
     <!-- SeaMonkey -->
