@@ -1,4 +1,6 @@
-quickFilters Change Log - Version 3.12.2
+quickFilters Change Log - Version 3.12.3
+
+Last maintenance version that supports Thunderbird 52. Future version require at least Thunderbird 60 because they will be compatible with Mozilla's new "web-Extensions" system.
 
 <ul>
 <li> <a href="https://www.mozdev.org/bugs/show_bug.cgi?id=26657" target="_blank">[Bug 26657]</a>  ESR 2019 Readyness - compatibility with Thunderbird 68
@@ -17,5 +19,6 @@ Older source code is available on a <a href="https://github.com/RealRaven2000/qu
 </ul> 
 </li>
 <li> The premium feature notification was not displaying the "close" button, this is now fixed.</li>
-<li> Fixed <a href="https://www.mozdev.org/bugs/show_bug.cgi?id=26662" target="_blank">[Bug 26662]</a> in 3.12.2:  Run Filters on folder button stopped workin on Thunderbird 60 (and older versions).</li>
+<li> Fixed in 3.12.2: <a href="https://www.mozdev.org/bugs/show_bug.cgi?id=26662" target="_blank">[Bug 26662]</a> Run Filters on folder button stopped workin on Thunderbird 60 (and older versions).</li>
+<li> Fixed in 3.12.3: <a href="https://www.mozdev.org/bugs/show_bug.cgi?id=26663" target="_blank">[Bug 26663]</a> Force secondary identity for licenses doesn't work.</li>
 </ul>
